--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -4,7 +4,7 @@ body{
 a{
     text-decoration: none;
 }
-.container{
+.containerr{
     display: flex;
     height: 100vh;
     flex-direction: column;
