--- a/client/src/styles/user-profile.css
+++ b/client/src/styles/user-profile.css
@@ -96,11 +96,9 @@
     display: flex;
     justify-content: space-between;
     transition: .25s;
-
-
-
 }
 .test_go{
+    min-width: 40px;
     max-width: 78px;
     width: 20%;
     background-color: #E8E8E8;
@@ -122,7 +120,7 @@
 }
 .test_value{
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     font-weight: 500;
     font-size: 20px;
