--- a/client/src/styles/test-create.module.css
+++ b/client/src/styles/test-create.module.css
@@ -1,3 +1,6 @@
+.container{
+    width: 100%;
+}
 .header_profile{
     background-color: #333333;
     width: 100%;
@@ -206,7 +209,7 @@ nav ul li {
     
 }
 
-nav a {
+/* nav a {
     cursor: pointer;
     border-radius: 10px;
     display: block;
@@ -216,7 +219,7 @@ nav a {
     font-size: 20px;
     line-height: 40px;
     text-decoration: none;
-}
+} */
 
 nav a:hover {
     background-color: #d6d6d6;
